@@ -77,6 +77,7 @@ Template for new versions:
 - ``Gui::MTB_clean``, ``Gui::MTB_parse``, ``Gui::MTB_set_width``: new functions for manipulating ``markup_text_boxst``
 - ``toupper_cp437(char)``, ``tolower_cp437(char)``: new ``MiscUtils`` functions, return a char with case changed, respecting CP437
 - ``toUpper``, ``toLower``: ``MiscUtils`` functions renamed to ``toUpper_cp437`` and ``toLower_cp437``, CP437 compliant
+- Gui focus strings will now include ``dwarfmode/Default`` if the only other panel open is the Squads panel
 
 ## Lua
 - Overlay framework now respects ``active`` and ``visible`` widget attributes
